...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/settings_btn2"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:onClick="onSettingsButtonClicked"
        android:text="@string/settings_title"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />


    <AutoCompleteTextView
        android:id="@+id/search_bar"
        android:layout_width="306dp"
        android:layout_height="43dp"
        android:icon="@android:drawable/ic_menu_search"
        android:hint="@string/search_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_bar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?android:attr/actionModeWebSearchDrawable" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_list"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/plan_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_list_header"
        tools:ignore="UnknownId" />

    <TextView
...
