...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:text="@string/settings_title"
        android:textSize="9sp"
        android:onClick="onSettingsButtonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
...
